fixed footer on mobile for index

--- a/css/main.css
+++ b/css/main.css
@@ -468,7 +468,6 @@ ul {
 
 .section {
   padding-bottom: 94px;
-  padding: 0;
 }
 
 img {
@@ -635,6 +634,12 @@ ul {
   top: 2208px;
 }
 
+@media screen and (max-width: 768px) {
+  .footer__address {
+    margin-bottom: 60px;
+  }
+}
+
 .footer__address link:hover,
 .footer__address link:focus {
   color: red;
@@ -644,16 +649,17 @@ ul {
   text-align: left;
 }
 
-.footer__address__list__item {
-  width: 231px;
-  height: 21px;
-  left: 215px;
-  top: 2208px;
-  font-family: inherit;
-  font-size: 14px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-  color: #ffffff;
+@media screen and (max-width: 768px) {
+  .footer__address__list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+}
+
+.footer__address__list__item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .footer__address__list__email a:link {
@@ -730,6 +736,70 @@ ul {
   letter-spacing: 0.06em;
   color: #ffffff;
   margin-right: 10 px;
+}
+
+.footer-input-box {
+  display: flex;
+}
+
+@media screen and (max-width: 1200px) {
+  .footer-input-box {
+    flex-direction: column;
+  }
+}
+
+.footer-mail-input {
+  margin-right: 12px;
+  background-color: #2f303a;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0 px 4 px 4 px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding-left: 16px;
+  outline: none;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (max-width: 768px) {
+  .footer-mail-input {
+    width: 90vw;
+    margin-bottom: 20px;
+  }
+}
+
+.footer-mail-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  min-height: 50px;
+  background: #2196f3;
+  border-radius: 4px;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 1200px) {
+  .footer-mail-btn {
+    margin: 0 auto;
+  }
+}
+
+.footer-btn-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  margin-right: 10px;
+}
+
+.footer-btn-icon {
+  width: 24px;
+  height: 24px;
+  fill: #ffffff;
 }
 
 .footer__form {
