--- a/sass/common/_common.scss
+++ b/sass/common/_common.scss
@@ -66,7 +66,6 @@ ul {
 
 .section {
   padding-bottom: 94px;
-  padding: 0;
 }
 
 .visually-hidden {
