--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,17 +6,6 @@
   padding-bottom: 60px;
 }
 
-// .footer__container {
-//   display: block;
-//   @media screen and (min-width: 768px) {
-//     display: flex;
-//   }
-
-//   @media screen and (min-width: 1200px) {
-//     display: flex;
-//   }
-// }
-
 .footer__container {
   display: flex;
   @media screen and (max-width: 768px) {
@@ -46,25 +35,44 @@
   left: 215px;
   top: 2208px;
 
+  @media screen and (max-width: 768px) {
+    margin-bottom: 60px;
+  }
+
   & link:hover,
   & link:focus {
     color: red;
   }
 }
 
+// .footer__address__list {
+//   text-align: left;
+
+//   &__item {
+//     width: 231px;
+//     height: 21px;
+//     left: 215px;
+//     top: 2208px;
+//     font-family: inherit;
+//     font-size: 14px;
+//     line-height: 1.2;
+//     letter-spacing: 0.03em;
+//     color: $primary-white-color;
+//   }
+// }
+
 .footer__address__list {
   text-align: left;
 
-  &__item {
-    width: 231px;
-    height: 21px;
-    left: 215px;
-    top: 2208px;
-    font-family: inherit;
-    font-size: 14px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    color: $primary-white-color;
+  @media screen and (max-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  &__item:not(:last-child) {
+    margin-bottom: 9px;
   }
 }
 
@@ -133,6 +141,64 @@
   line-height: 1.87;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: $primary-white-color;
   margin-right: 10 px;
+}
+
+.footer-input-box {
+  display: flex;
+  @media screen and (max-width: 1200px) {
+    flex-direction: column;
+  }
+}
+
+.footer-mail-input {
+  margin-right: 12px;
+  background-color: #2f303a;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0 px 4 px 4 px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding-left: 16px;
+  outline: none;
+  color: rgba(255, 255, 255, 0.6);
+
+  @media screen and (max-width: 768px) {
+    width: 90vw;
+    margin-bottom: 20px;
+  }
+}
+
+.footer-mail-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  min-height: 50px;
+  background: #2196f3;
+
+  border-radius: 4px;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 1200px) {
+    margin: 0 auto;
+  }
+}
+
+.footer-btn-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: $primary-white-color;
+  margin-right: 10px;
+}
+
+.footer-btn-icon {
+  width: 24px;
+  height: 24px;
+  fill: $primary-white-color;
 }
